Hover all connections associated to a network interface instead of just the first one found.

BUG: 272135